Rating for product card added and single page for product component layout bug fixed.

--- a/src/styles/card.scss
+++ b/src/styles/card.scss
@@ -73,7 +73,7 @@
 }
 
 .btnAdd {
-  background-color: #0e652e;
+  background-color: #0b5e29e5;
   color: white;
   border: none;
   padding: 0.5rem 1rem;
